# CSharp

./: .editorconfig  .gitignore  CSharp.sln  README.md  index.html  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: ci.yaml
Aufgaben/bars/: Program.cs  README.md  Tools.cs  Tools.test.cs  bars.csproj
Aufgaben/calculator/: Program.cs  README.md  Tools.cs  Tools.test.cs  calculator.csproj
Aufgaben/dice/: Program.cs  README.md  Tools.cs  Tools.test.cs  Types.cs  dice.csproj
Aufgaben/fibonacci/: Program.cs  Reamde.md
Aufgaben/functions/: Program.cs  README.md
Aufgaben/guess100/: Program.cs
Aufgaben/guess100Functional/: Program.cs
Aufgaben/helloworld/: Readme.md
Aufgaben/unittest/: Program.Test.cs  Program.cs
Folien/: README.md  presentation.js  presentation.md
eval/: pyproject.toml  setup.cfg
eval/eval/: asgi.py  settings.py  urls.py  wsgi.py
eval/eval_course/: admin.py  apps.py  models.py  urls.py  views.py
eval/eval_course/management/commands/: get_answers.py
eval/eval_course/migrations/: 0001_initial.py
eval/eval_course/static/: eval_course.css
eval/eval_course/templates/eval_course/: eval.html  thanks.html
