[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Mike Arnhold <Mike.Arnhold@tu-dresden.de>"]
packages = [{include = "eval"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.4"
mypy = "^1.3.0"
black = "^23.3.0"
django = "^4.2.1"
django-stubs = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
